--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "tsc & node .",
     "dev": "tsc -w & nodemon .",
     "dev-win": " nodemon .",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/data/db.ts",
     "lint": "prettier --write '**/*.ts'"
   },
   "engines": {
